[project]
name = "tele-ai-agent"
version = "0.1.0"
description = "An LLM-powered Telegram assistant with real-time tool integrations like weather and stock data."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "P. VARUN"}
]

dependencies = [
  "python-dotenv",
  "python-telegram-bot",
  "requests",
  "aiohttp",
  "langchain",
  "langchain-core",
  "ollama",
  "yfinance",
  "geopy"
]
